<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--<PreferenceCategory android:title="@string/pref_user_profile" >-->
        <!--<EditTextPreference-->
            <!--android:title="@string/pref_user_name"-->
            <!--android:summary="@string/pref_user_name_summary"-->
            <!--android:key="prefUsername"/>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/pref_update_setting" >-->
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="prefSendReport"-->
            <!--android:summary="@string/pref_send_report_summary"-->
            <!--android:title="@string/pref_send_report" >-->
        <!--</CheckBoxPreference>-->

        <!--<ListPreference-->
            <!--android:key="prefSyncFrequency"-->
            <!--android:entries="@array/syncFrequency"-->
            <!--android:summary="@string/pref_sync_frequency_summary"-->
            <!--android:entryValues="@array/syncFrequencyValues"-->
            <!--android:title="@string/pref_sync_frequency" />-->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/pref_trip">
        <com.thenicky.fleettracker.settings.SeekBarPreference
            android:defaultValue="10"
            android:dialogMessage="@string/pref_trip_resolution_dialog_message"
            android:key="TRIP_RESOLUTION"
            android:max="60"
            android:summary="@string/pref_trip_resolution_summary"
            android:text="@string/pref_trip_resolution_unit"
            android:title="@string/pref_trip_resolution" />
    </PreferenceCategory>

</PreferenceScreen>